# e3d

./: .gitmodules  CMakeLists.txt  README.md
src/: cube.c  triangles.c
